3.3/playbook/ingress/ingress-back.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-networkpolicy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: back
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - {key: app, operator: In, values: [front, cache]}
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - {key: app, operator: In, values: [front, cache]}
    - to:               
      ports:            
      - protocol: UDP   
        port: 53
