3.3/playbook/ingress/ingress-cache.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache-networkpolicy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back
  egress:
      - to:               
        ports:            
        - protocol: UDP   
          port: 53   
  #   - to:
  #       - podSelector:
  #           matchLabels:
  #             app: back
