3.3/playbook/ingress/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-networkpolicy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: back  
    - to:               
      ports:            
      - protocol: UDP   
        port: 53
