3.3/playbook/ingress/ingress-not.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-not
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
